# community-sim-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_STRUCTURE.puml  README.md  TODO.md  agent_types.yaml  community_sim-mac-x86_64  event_log_access_checklist.md  sim_profiles.yaml  simulation_ascii.txt  simulation_map.txt  system_profile.csv  wildChanges.md
.github/: ci_note.md
benchmark/: README.md  run_benchmarks.sh
config/: agent_types.yaml  demo_spawn.yaml  sim_profiles.yaml  stats_window.yaml
flames/: gen_flamegraph.sh  gen_flamegraph_mac.sh  gen_flamegraph_sample_mac.sh  med_run_20250423_233816_sample.txt  med_run_20250423_234020.folded  med_run_20250423_234020_sample.txt  med_run_quiet_20250423_112519_summary.csv
plans/: agentInteractionBehavior_event_driven.md  agent_event_system_generalization.md  ecs_schedule_refactor_plan.md  sim_profile_refactor_plan.md
profiling/: profile_viz.py  system_profile.csv
someDocs/: PROJECT_STRUCTURE.md  agent_ecs_systems_flowchart.mmd  agent_ecs_systems_overview.md
src/: agent.rs  agent.rs.backup  agent_navigation.rs  config.rs  ecs_components.rs  ecs_hello.rs  ecs_sim.rs  ecs_simulation.rs  event_log.rs  graphics.rs  interaction.rs  lib.rs  log_config.rs  main.rs  map.rs  render_ascii.rs  sim_core.rs  sim_loop.rs  sim_loop_unified.rs  sim_profile.rs  sim_state.rs  sim_summary.rs  simulation.rs  spawn_config.rs  unified_sim_entry.rs  util.rs
tests/: agent_agent_integration.rs  agent_agent_interaction_system.rs  agent_event_log_bridge_test.rs  agent_event_log_test.rs  agent_tests.rs  agent_type_tests.rs  map_tests.rs  (+10 more)
(+187 files in other folders)
